@@ -9,8 +9,8 @@
 #include "DataLinkSet_rch.h"
 #include "TransportDefs.h"
 #include "dds/DCPS/Definitions.h"
-#include "ace/Hash_Map_Manager.h"
 #include "ace/Synch.h"
+#include <map>
 
 
 namespace TAO
@@ -92,13 +92,9 @@ namespace TAO
         typedef ACE_SYNCH_MUTEX     LockType;
         typedef ACE_Guard<LockType> GuardType;
 
-        typedef ACE_Hash_Map_Manager_Ex<RepoId,
-                                        DataLinkSet_rch,
-                                        ACE_Hash<RepoId>,
-                                        ACE_Equal_To<RepoId>,
-                                        ACE_Null_Mutex>        MapType;
+        typedef std::map <RepoId, DataLinkSet_rch>      MapType;
 
-      LockType map_lock_; // This lock is explicitly for this->map_ protection
+        LockType map_lock_; // This lock is explicitly for this->map_ protection
         MapType  map_;
     };
 
